Improve card image top and card image bottom can use with another card components.
- Only card-img-top is first-child add border-radius

- Only card-img-bottom is last-child add border-radius

--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -174,10 +174,10 @@
 
 
 // Card image caps
-.card-img-top {
+.card-img-top:first-child {
   @include border-top-radius($card-border-radius-inner);
 }
-.card-img-bottom {
+.card-img-bottom:last-child {
   @include border-bottom-radius($card-border-radius-inner);
 }
 
