Add border width to input height variables
This commit adds the border width (top + bottom) to the input height
variables by default. This makes IMHO much more sense because every
element is set to `box-sizing: border-box`, so the border height should
count to the total element height.

This commit introduces some handy helper functions to convert `rem`
units to `px` and vice versa. This is required to calculate the total
input height because the border width is defined in `px` and the other
height related variables (`padding`, `font-size` etc.) are defined in
`rem`.

--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -66,8 +66,7 @@
 
 select.form-control {
   &:not([size]):not([multiple]) {
-    $select-border-width: ($border-width * 2);
-    height: calc(#{$input-height} + #{$select-border-width});
+    height: $input-height;
   }
 
   &:focus::-ms-value {
@@ -165,8 +164,7 @@ select.form-control {
 
 select.form-control-sm {
   &:not([size]):not([multiple]) {
-    $select-border-width: ($border-width * 2);
-    height: calc(#{$input-height-sm} + #{$select-border-width});
+    height: $input-height-sm;
   }
 }
 
@@ -179,8 +177,7 @@ select.form-control-sm {
 
 select.form-control-lg {
   &:not([size]):not([multiple]) {
-    $select-border-width: ($border-width * 2);
-    height: calc(#{$input-height-lg} + #{$select-border-width});
+    height: $input-height-lg;
   }
 }
 
