--- a/scss/bootstrap-reboot.scss
+++ b/scss/bootstrap-reboot.scss
@@ -2,6 +2,7 @@
 //
 // Includes only Normalize and our custom Reboot reset.
 
+@import "helper-functions";
 @import "custom";
 @import "variables";
 @import "mixins";
