makes small part in Headlines behave as designed

--- a/scss/custom/_type.scss
+++ b/scss/custom/_type.scss
@@ -1,3 +1,16 @@
 body {
   -webkit-font-smoothing: antialiased;
 }
+
+//
+// Headings
+//
+
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
+  small,
+  .small {
+    font-size: 1em; // inherit headline size
+    font-weight: $font-weight-light;
+  }
+}
