increases line height of headings for better radability

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -292,7 +292,7 @@ $font-size-h6: 1rem !default;
 $headings-margin-bottom: 1rem;
 $headings-font-family:   inherit !default;
 $headings-font-weight:   $font-weight-bold;
-$headings-line-height:   1.1 !default;
+$headings-line-height:   1.25;
 $headings-color:         inherit !default;
 
 $display1-size: 2.5rem;
