Added a mixin for managing z-index

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -16,6 +16,7 @@
 @import "mixins/text-truncate";
 @import "mixins/transforms";
 @import "mixins/visibility";
+@import "mixins/zindex";
 
 // // Components
 @import "mixins/alert";
