--- a/scss/utilities/_position.scss
+++ b/scss/utilities/_position.scss
@@ -5,7 +5,7 @@
   top: 0;
   right: 0;
   left: 0;
-  z-index: $zindex-fixed;
+  @include zindex("fixed");
 }
 
 .fixed-bottom {
@@ -13,11 +13,11 @@
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: $zindex-fixed;
+  @include zindex("fixed");
 }
 
 .sticky-top {
   position: sticky;
   top: 0;
-  z-index: $zindex-sticky;
+  @include zindex("sticky");
 }
