--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -16,9 +16,9 @@
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: $zindex-modal;
   display: none;
   overflow: hidden;
+  @include zindex("modal");
   // Prevent Chrome on Windows from adding a focus outline. For details, see
   // https://github.com/twbs/bootstrap/pull/10951.
   outline: 0;
@@ -66,8 +66,8 @@
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: $zindex-modal-backdrop;
   background-color: $modal-backdrop-bg;
+  @include zindex("modal", 10);
 
   // Fade for backdrop
   &.fade { opacity: 0; }
