--- a/scss/_tooltip.scss
+++ b/scss/_tooltip.scss
@@ -1,7 +1,6 @@
 // Base class
 .tooltip {
   position: absolute;
-  z-index: $zindex-tooltip;
   display: block;
   // Our parent element can be arbitrary since tooltips are by default inserted as a sibling of their target element.
   // So reset our font and text properties to avoid inheriting weird values.
@@ -10,6 +9,7 @@
   // Allow breaking very long words so they don't overflow the tooltip's bounds
   word-wrap: break-word;
   opacity: 0;
+  @include zindex("tooltip");
 
   &.show { opacity: $tooltip-opacity; }
 
