--- a/scss/_popover.scss
+++ b/scss/_popover.scss
@@ -16,7 +16,7 @@
   border: $popover-border-width solid $popover-border-color;
   @include border-radius($border-radius-lg);
   @include box-shadow($popover-box-shadow);
-  @include zindex("popover")
+  @include zindex("popover");
 
 
   // Popover directions
