[DR-7840-Implement-breadcrumb-component] adds custom breadcrump style

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -276,7 +276,7 @@ $font-size-sm:   .75rem; // ~ 12px - our small font size
 $font-size-xs:   .625rem; // ~ 10px - not used atm, use to hide something
 
 $font-weight-normal: 400;  // ~ Fira Regular
-$font-weight-bold: 600; // ~ Fira Semibold 
+$font-weight-bold: 600; // ~ Fira Semibold
 $font-weight-light: 200; // ~ Fira Light, used in Small Headline and Hero, maybe we can live without it
 
 $font-weight-base: $font-weight-normal !default;
@@ -970,10 +970,11 @@ $breadcrumb-padding-y:          .75rem !default;
 $breadcrumb-padding-x:          1rem !default;
 $breadcrumb-item-padding:       .5rem !default;
 
-$breadcrumb-bg:                 $gray-lighter !default;
+$breadcrumb-bg:                 transparent !default;
+$breadcrumb-item-color:         $gray-light !default;
 $breadcrumb-divider-color:      $gray-light !default;
 $breadcrumb-active-color:       $gray-light !default;
-$breadcrumb-divider:            "/" !default;
+$breadcrumb-divider:            " " !default;
 
 
 // Carousel
