aligns (too few) items vertically

--- a/scss/custom/_slider.scss
+++ b/scss/custom/_slider.scss
@@ -15,7 +15,7 @@
 .slider-item {
   position: relative;
   display: inline-block;
-  vertical-align: middle;
+  vertical-align: top;
 }
 
 .slider-item-grid-spacing {
