adds desired char

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -974,7 +974,7 @@ $breadcrumb-bg:                 transparent !default;
 $breadcrumb-item-color:         $gray-light !default;
 $breadcrumb-divider-color:      $gray-light !default;
 $breadcrumb-active-color:       $gray-light !default;
-$breadcrumb-divider:            " " !default;
+$breadcrumb-divider:            "›" !default;
 
 
 // Carousel
