makes breadcrumb margin editable, removes spacing

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -976,6 +976,8 @@ $breadcrumb-divider-color:      $gray-light !default;
 $breadcrumb-active-color:       $gray-light !default;
 $breadcrumb-divider:            "›" !default;
 
+$breadcrumb-spacing-bottom:     0; // removes default breadcrumb bottom spacing
+
 
 // Carousel
 
