reduces default font-size of breadcrumb. did not use modifier, as we have no use case

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -977,6 +977,7 @@ $breadcrumb-active-color:       $gray-light !default;
 $breadcrumb-divider:            "›" !default;
 
 $breadcrumb-spacing-bottom:     0; // removes default breadcrumb bottom spacing
+$breadcrumb-font-size:          $font-size-sm;
 
 
 // Carousel
