makes headings inherit the respective color of the section

--- a/scss/custom/_sections.scss
+++ b/scss/custom/_sections.scss
@@ -47,3 +47,11 @@
 .section-primary {
   color: $section-primary-color;
 }
+
+// Make Headings inherit correct color
+.section {
+  h1, h2, h3, h4, h5, h6,
+  .h1, .h2, .h3, .h4, .h5, .h6 {
+    color: inherit;
+  }
+}
