outlines publication block

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1108,3 +1108,13 @@ $slider-control-indicator-active-bg: $gray-dark;
 
 $slider-control-prev-icon-bg: $carousel-control-prev-icon-bg;
 $slider-control-next-icon-bg: $carousel-control-next-icon-bg;
+
+
+// Publication
+//
+//
+
+$publication-title-size: $font-size-h2;
+$publication-title-font-weight: $headings-font-weight;
+$publication-title-color: $headings-color;
+$publication-meta-font-size: $font-size-sm;
