improves behavior of meta on mobile

--- a/scss/custom/_card.scss
+++ b/scss/custom/_card.scss
@@ -180,8 +180,8 @@ a.card-block {
       margin-right: $spacer-x * .25;
     }
 
-    .meta-item:last-child {
-      margin-left: auto;
+    .meta-company {
+      margin-right: auto;
     }
 
     .badge {
