[DR-7840-Implement-breadcrumb-component] refactoring _breadcrumb style

--- a/scss/custom/_breadcrumb.scss
+++ b/scss/custom/_breadcrumb.scss
@@ -6,12 +6,17 @@
     color: $breadcrumb-item-color;
     text-decoration: underline;
 
+    a {
+      color: inherit;
+    }
+
+    &:hover,
+    a:hover {
+      color: inherit;
+    }
+
     &.active {
       text-decoration: none;
     }
-  }
-
-  li.breadcrumb-item a {
-    color: $breadcrumb-item-color;
   }
 }
