[DR-7840-Implement-breadcrumb-component] removes default

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -971,7 +971,7 @@ $breadcrumb-padding-x:          1rem !default;
 $breadcrumb-item-padding:       .5rem !default;
 
 $breadcrumb-bg:                 transparent !default;
-$breadcrumb-item-color:         $gray-light !default;
+$breadcrumb-item-color:         $gray-light;
 $breadcrumb-divider-color:      $gray-light !default;
 $breadcrumb-active-color:       $gray-light !default;
 $breadcrumb-divider:            "›" !default;
