--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -957,12 +957,12 @@ $list-group-link-active-bg:      $gray-lighter !default;
 
 // Image thumbnails
 
-$thumbnail-padding:           .25rem !default;
-$thumbnail-bg:                $body-bg !default;
+$thumbnail-padding:           $spacer * .25;
+$thumbnail-bg:                transparent;
 $thumbnail-border-width:      $border-width !default;
-$thumbnail-border-color:      #ddd !default;
+$thumbnail-border-color:      $gray-lightest;
 $thumbnail-border-radius:     $border-radius !default;
-$thumbnail-box-shadow:        0 1px 2px rgba($black,.075) !default;
+$thumbnail-box-shadow:        none;
 $thumbnail-transition:        all .2s ease-in-out !default;
 
 
