--- a/scss/mixins/_buttons.scss
+++ b/scss/mixins/_buttons.scss
@@ -24,7 +24,7 @@
     @if $enable-shadows {
       box-shadow: $btn-box-shadow, 0 0 0 2px rgba($border, .5);
     } @else {
-      box-shadow: 0 0 0 2px rgba($border, .5);
+      box-shadow: $btn-focus-box-shadow;
     }
   }
 
