--- a/scss/mixins/_badge.scss
+++ b/scss/mixins/_badge.scss
@@ -1,8 +1,7 @@
 // Badges
 
-@mixin badge-variant($bgcolor,$color) {
-  background-color: $bgcolor;
-  color: $color;
+@mixin badge-variant($color) {
+  background-color: $color;
 
   &[href] {
     @include hover-focus {
