fix(dropdow): fix invalid variable declaration

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -548,7 +548,7 @@ $dropdown-link-active-bg:        $component-active-bg !default;
 $dropdown-link-disabled-color:   $gray-light !default;
 
 $dropdown-item-padding-x:        1.5rem !default;
-$dropdown-item-padding-x:        3px !default;
+$dropdown-item-padding-y:        3px !default;
 
 $dropdown-header-color:          $gray-light !default;
 
