docs(accessibility): improve documentation pages accessibility. Add a main container

--- a/docs/_layouts/docs.html
+++ b/docs/_layouts/docs.html
@@ -19,7 +19,7 @@
       </div>
     </div>
 
-    <div class="container">
+    <main class="container" role="main">
       <div class="row">
         <div class="col-12 col-md-3 push-md-9 bd-sidebar">
           {% include nav-docs.html %}
@@ -29,7 +29,7 @@
           {{ content }}
         </div>
       </div>
-    </div>
+    </main>
 
     {% include footer.html %}
   </body>
