--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -279,4 +279,9 @@
   .navbar-text {
     color: $navbar-inverse-color;
   }
+  
+  .input-group .form-control {
+    border-color: $btn-secondary-border;
+  }
+  
 }
