Tweak select2 pickers theme

--- a/less/theme.less
+++ b/less/theme.less
@@ -509,15 +509,70 @@ body {
     padding-bottom: @padding-base-vertical;
   }
 }
+
+.select2-input-defaults() {
+  .box-shadow(none);
+  background-color: @input-bg;
+  border: 1px solid @input-border;
+  border-radius: @input-border-radius;
+  color: @input-color;
+  font-size: @font-size-base;
+}
+
 .select2-container--bootstrap {
-    width: 100% !important;
+  width: 100% !important;
+
+  .select2-search--dropdown {
+    .select2-dropdown {
+      border-radius: @border-radius-base;
+    }
+    .select2-search__field {
+      .select2-input-defaults;
+      //color: @input-color;
+      //background-color: @input-bg;
+    }
+  }
+
+  .select2-results__option {
+    color: @btn-default-color;
+    background-color: @btn-default-bg;
+  }
+
+  .select2-search__field {
+
+    &::-webkit-input-placeholder {
+      color: @input-color-placeholder;
+    }
+
+    /* Firefox 18- */
+    &:-moz-placeholder {
+      color: @input-color-placeholder;
+    }
+
+    /**
+     * Firefox 19+
+     *
+     * @see http://stackoverflow.com/questions/24236240/color-for-styled-placeholder-text-is-muted-in-firefox
+     */
+    &::-moz-placeholder {
+      color: @input-color-placeholder;
+      opacity: 1;
+    }
+
+    &:-ms-input-placeholder {
+      color: @input-color-placeholder;
+    }
+  }
+
+  .select2-selection--multiple {
+    .select2-input-defaults; 
+  }
+
+  .select2-selection {
+    border-radius: @border-radius-base;
+  }
 }
-.select2-container--bootstrap .select2-selection {
-  border-radius: @border-radius-base;
-}
-.select2-dropdown {
-  border-radius: @border-radius-base;
-}
+
 .select2-label {
   line-height: @s2bs-input-height-base;
   padding: @s2bs-padding-base-vertical @s2bs-padding-base-horizontal;
