styles default tabbed navigation

--- a/scss/custom/_nav.scss
+++ b/scss/custom/_nav.scss
@@ -13,3 +13,26 @@
     }
   }
 }
+
+//
+// Tabs
+//
+
+.nav-tabs {
+  border-bottom: $nav-tabs-border-width solid transparent;
+
+  .nav-item {
+    margin-bottom: -$nav-tabs-border-width;
+  }
+
+  .nav-link {
+    color: $nav-tabs-link-color;
+    border: none;
+    border-bottom: $nav-tabs-border-width solid transparent;
+  }
+
+  .nav-link.active,
+  .nav-item.show .nav-link {
+    border-color: $nav-tabs-active-link-hover-border-color;
+  }
+}
