adds small variant

--- a/scss/custom/_nav.scss
+++ b/scss/custom/_nav.scss
@@ -26,6 +26,7 @@
   }
 
   .nav-link {
+    padding: $nav-tabs-default-padding;
     color: $nav-tabs-link-color;
     border: none;
     border-bottom: $nav-tabs-border-width solid transparent;
@@ -34,5 +35,11 @@
   .nav-link.active,
   .nav-item.show .nav-link {
     border-color: $nav-tabs-active-link-hover-border-color;
+  }
+}
+
+.nav-tabs-sm {
+  .nav-link {
+    padding: $nav-tabs-sm-padding;
   }
 }
