--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -681,7 +681,7 @@ $navbar-link-disabled-color: lighten($component-inverse-bg, 15%);
 // Navs
 
 $nav-link-padding:              .5em 1em !default;
-$nav-disabled-link-color:       $gray-light !default;
+$nav-disabled-link-color:       $gray-lighter;
 
 $nav-tabs-border-color:                       $brand-primary;
 $nav-tabs-border-width:                       .25rem;
@@ -692,6 +692,8 @@ $nav-tabs-active-link-hover-bg:               transparent;
 $nav-tabs-active-link-hover-border-color:     $brand-primary;
 
 $nav-tabs-link-color:                         $body-color;
+$nav-tabs-default-padding:                    ($spacer-y * 1.5) $spacer-x;
+$nav-tabs-sm-padding:                         ($spacer-y * .5) $spacer-x;
 
 $nav-pills-border-radius:     $border-radius !default;
 $nav-pills-active-link-color: $component-active-color !default;
