adds markup and doc for search-agent

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1131,3 +1131,19 @@ $publication-title-size: $font-size-h2;
 $publication-title-font-weight: $headings-font-weight;
 $publication-title-color: $headings-color;
 $publication-meta-font-size: $font-size-sm;
+
+// Search Agent
+//
+//
+
+$search-agent-color: $white;
+$search-agent-bg: $brand-inverse;
+$search-agent-padding: $spacer * 2;
+
+$search-title-size: $display1-size;
+$search-title-weight: $display1-weight;
+$search-title-color: inherit;
+
+$search-subtitle-size: $font-size-sm;
+$search-subtitle-weight: $font-weight-bold;
+$search-subtitle-color: $brand-primary;
