changes wording, corrects line height for title

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1145,6 +1145,6 @@ $search-title-size: $display1-size;
 $search-title-weight: $display1-weight;
 $search-title-color: inherit;
 
-$search-subtitle-size: $font-size-sm;
-$search-subtitle-weight: $font-weight-bold;
-$search-subtitle-color: $brand-primary;
+$search-byline-size: $font-size-sm;
+$search-byline-weight: $font-weight-bold;
+$search-byline-color: $brand-primary;
