--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -800,19 +800,19 @@ $alert-border-width:          $border-width !default;
 
 $alert-success-bg:            $state-success-bg !default;
 $alert-success-text:          $state-success-text !default;
-$alert-success-border:        $state-success-border-color !default;
+$alert-success-border-color:  $state-success-border-color !default;
 
 $alert-info-bg:               $state-info-bg !default;
 $alert-info-text:             $state-info-text !default;
-$alert-info-border:           $state-info-border-color !default;
+$alert-info-border-color:     $state-info-border-color !default;
 
 $alert-warning-bg:            $state-warning-bg !default;
 $alert-warning-text:          $state-warning-text !default;
-$alert-warning-border:        $state-warning-border-color !default;
+$alert-warning-border-color:  $state-warning-border-color !default;
 
 $alert-danger-bg:             $state-danger-bg !default;
 $alert-danger-text:           $state-danger-text !default;
-$alert-danger-border:         $state-danger-border-color !default;
+$alert-danger-border-color:   $state-danger-border-color !default;
 
 
 // Progress bars
