--- a/scss/joblocal.scss
+++ b/scss/joblocal.scss
@@ -5,6 +5,7 @@
 @import "bootstrap";
 
 // import custom utilities
+@import "custom/utilities/icons";
 @import "custom/utilities/background";
 @import "custom/utilities/shadows";
 
