--- a/scss/custom/utilities/_icons.scss
+++ b/scss/custom/utilities/_icons.scss
@@ -1,46 +1,3 @@
-// Icon Variables
-// 
-// 
-
-$icons-font-path: "/assets/fonts/icons" !default;
-
-$icon-arrow-top: "\e900";
-$icon-arrow-right: "\e901";
-$icon-arrow-bottom: "\e902";
-$icon-arrow-left: "\e903";
-$icon-star: "\e904";
-$icon-more: "\e905";
-$icon-less: "\e906";
-$icon-benefit-barrier-free: "\e907";
-$icon-benefit-canteen: "\e908";
-$icon-benefit-childcare: "\e909";
-$icon-benefit-coaching: "\e90a";
-$icon-benefit-company-car: "\e90b";
-$icon-benefit-company-doctor: "\e90c";
-$icon-benefit-dogs-allowed: "\e90d";
-$icon-benefit-employee-discount: "\e90e";
-$icon-benefit-employee-events: "\e90f";
-$icon-benefit-employee-mobile-phone: "\e910";
-$icon-benefit-employee-shareholding: "\e911";
-$icon-benefit-flexible-working-hours: "\e912";
-$icon-benefit-food-allowance: "\e913";
-$icon-benefit-further-education: "\e914";
-$icon-benefit-health-measures: "\e915";
-$icon-benefit-homeoffice: "\e916";
-$icon-benefit-internet-use: "\e917";
-$icon-benefit-paid-training: "\e918";
-$icon-benefit-parking: "\e919";
-$icon-benefit-pension: "\e91a";
-$icon-benefit-ride-cost-refunds: "\e91b";
-$icon-benefit-traffic-connections: "\e91c";
-$icon-benefit-work-clothes: "\e91d";
-$icon-caret-top: "\e91e";
-$icon-caret-right: "\e91f";
-$icon-caret-bottom: "\e920";
-$icon-caret-left: "\e921";
-$icon-search: "\e922";
-
-
 // Icon Styles
 // 
 // 
@@ -56,7 +13,9 @@ $icon-search: "\e922";
   font-style: normal;
 }
 
-[class^="icon-"], [class*=" icon-"] {
+.icon,
+[class^="icon-"],
+[class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'joblocal-icons' !important;
   speak: none;
@@ -69,6 +28,16 @@ $icon-search: "\e922";
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+@mixin icon {
+  font-family: 'joblocal-icons' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
 }
 
 .icon-arrow-top:before { content: $icon-arrow-top; }
