--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -383,7 +383,7 @@ $table-border-color:            $gray-lighter !default;
 // For each of Bootstrap's buttons, define text, background and border color.
 
 $btn-padding-x:                  1rem;
-$btn-padding-y:                  .5rem;
+$btn-padding-y:                  .75rem;
 $btn-line-height:                1.25;
 $btn-font-weight:                $font-weight-normal !default;
 $btn-box-shadow:                 none;
@@ -446,7 +446,7 @@ $btn-cta-font-weight: $font-weight-bold;
 // Forms
 
 $input-padding-x:                .75rem !default;
-$input-padding-y:                .5rem !default;
+$input-padding-y:                .75rem;
 $input-line-height:              1.25 !default;
 
 $input-bg:                       $white !default;
